# kde1-kdelibs

./: CMakeLists.txt
cmake/: KDE1InstallDirs.cmake
jscript/: CMakeLists.txt
kab/: CMakeLists.txt
kdecore/: CMakeLists.txt
kdeui/: CMakeLists.txt
kfile/: CMakeLists.txt
kfmlib/: CMakeLists.txt
khtmlw/: CMakeLists.txt
kimgio/: CMakeLists.txt
kspell/: CMakeLists.txt
mediatool/: CMakeLists.txt
